jvm options added